[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/characters/input_state/input_state.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/funguy/funguy.gd" type="Script" id=2]
[ext_resource path="res://src/characters/funguy/controller.gd" type="Script" id=3]
[ext_resource path="res://src/characters/funguy/funguy.png" type="Texture" id=4]
[ext_resource path="res://src/characters/funguy/hurtbox.gd" type="Script" id=5]
[ext_resource path="res://src/characters/funguy/health.gd" type="Script" id=6]
[ext_resource path="res://assets/shader/palette.gdshader" type="Shader" id=7]
[ext_resource path="res://src/util/color/palette_client.tscn" type="PackedScene" id=8]

[sub_resource type="Image" id=27]
data = {
"data": PoolByteArray( 255, 255, 0, 255, 126, 126, 1, 255, 60, 60, 2, 255, 0, 0, 3, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture" id=11]
flags = 0
flags = 0
image = SubResource( 27 )
size = Vector2( 4, 1 )

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/palette_size = 4
shader_param/offset = 0.0
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 11 )

[sub_resource type="Animation" id=17]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=14]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=15]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.0, 2.0 ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 7, 7.5 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 155, 71.5 )

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("normal_palette:trigger")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=23]
length = 0.0833333
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("hurt_palette:trigger")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("normal_palette:trigger")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0833333 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=24]
tracks/0/type = "value"
tracks/0/path = NodePath("normal_palette:trigger")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="funguy" type="KinematicBody2D"]
material = SubResource( 12 )
collision_mask = 2
script = ExtResource( 2 )
speed = 40.0
horizontal_acceleration = 250.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/air = SubResource( 17 )
anims/idle = SubResource( 14 )
anims/walk = SubResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 16 )

[node name="pivot" type="Node2D" parent="."]
use_parent_material = true

[node name="Sprite" type="Sprite" parent="pivot"]
use_parent_material = true
texture = ExtResource( 4 )
hframes = 2
vframes = 2
__meta__ = {
"_aseprite_wizard_config_": {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "AnimationPlayer",
"source": "res://assets/aseprite/funguy.aseprite"
}
}

[node name="input_state" parent="." instance=ExtResource( 1 )]

[node name="controller" type="Node2D" parent="."]
process_priority = -1410065408
script = ExtResource( 3 )

[node name="target_detect" type="Area2D" parent="controller"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="controller/target_detect"]
position = Vector2( 0, -31.5 )
shape = SubResource( 26 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, 0.5 )
shape = SubResource( 16 )

[node name="health" type="Node" parent="."]
script = ExtResource( 6 )
value = 10.0
max_value = 10.0

[node name="normal_palette" parent="." instance=ExtResource( 8 )]
index = 3

[node name="hurt_palette" parent="." instance=ExtResource( 8 )]
index = 7

[node name="damage_animation" type="AnimationPlayer" parent="."]
autoplay = "normal"
anims/RESET = SubResource( 19 )
anims/hurt = SubResource( 23 )
anims/normal = SubResource( 24 )

[connection signal="got_hit" from="." to="health" method="subtract"]
[connection signal="empty" from="health" to="." method="queue_free"]
